--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -11,7 +11,7 @@
 \newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.4.0-Darwin.dmg}
 \newcommand{\KnimeUpdateSite}{http://update.knime.com/analytics-platform/3.6}
 \newcommand{\KnimeTrustedSite}{http://update.knime.com/community-contributions/trusted/3.6}
-\newcommand{\KnimeTrunkSite}{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/knime-plugin/updateSite/experimental/!!!!!!!!!!!!!!!!!TODO!!!!!!!!!!!!!!!!!!!!!!!!!!/}
+\newcommand{\KnimeTrunkSite}{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/knime-plugin/updateSite/RC/2.4.0/}
 
 % enable this line if the internal OpenMS update site is used
 %\newcommand{\OpenMSSite}{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/knime-plugin/updateSite/RC/}
