--- a/Handout/handout.bib
+++ b/Handout/handout.bib
@@ -407,3 +407,92 @@ url = {https://academic.oup.com/bioinformatics/bioinformatics/article/2748156/MS
 volume = {30},
 year = {2014}
 }
+
+@article{Bocker2009,
+abstract = {MOTIVATION High-resolution mass spectrometry (MS) is among the most widely used technologies in metabolomics. Metabolites participate in almost all cellular processes, but most metabolites still remain uncharacterized. Determination of the sum formula is a crucial step in the identification of an unknown metabolite, as it reduces its possible structures to a hopefully manageable set. RESULTS We present a method for determining the sum formula of a metabolite solely from its mass and the natural distribution of its isotopes. Our input is a measured isotope pattern from a high resolution mass spectrometer, and we want to find those molecules that best match this pattern. Our method is computationally efficient, and results on experimental data are very promising: for orthogonal time-of-flight mass spectrometry, we correctly identify sum formulas for {\textgreater}90{\%} of the molecules, ranging in mass up to 1000 Da.},
+author = {B{\"{o}}cker, Sebastian and Letzel, Matthias C. and Lipt{\'{a}}k, Zsuzsanna and Pervukhin, Anton},
+doi = {10.1093/bioinformatics/btn603},
+file = {:Users/alka/Documents/work/paper/mendeleydesktop/B{\"{o}}cker et al/B{\"{o}}cker et al.{\_}2009{\_}SIRIUS Decomposing isotope patterns for metabolite identification(2).pdf:pdf},
+isbn = {1460-2059 (Electronic)},
+issn = {13674803},
+journal = {Bioinformatics},
+number = {2},
+pages = {218--224},
+pmid = {19015140},
+title = {{SIRIUS: Decomposing isotope patterns for metabolite identification}},
+volume = {25},
+year = {2009}
+}
+
+@article{Duhrkop2015,
+abstract = {Metabolites provide a direct functional signature of cellular state. Untargeted metabolomics experiments usually rely on tandem MS to identify the thousands of compounds in a biological sample. Today, the vast majority of metabolites remain unknown. We present a method for searching molecular structure databases using tandem MS data of small molecules. Our method computes a fragmentation tree that best explains the fragmentation spectrum of an unknown molecule. We use the fragmentation tree to predict the molecular structure fingerprint of the unknown compound using machine learning. This fingerprint is then used to search a molecular structure database such as PubChem. Our method is shown to improve on the competing methods for computational metabolite identification by a considerable margin.},
+annote = {CSIFingerID
+CSI: Compound Structure Identification
+
+tandem ms -{\textgreater} fragmentation tree -{\textgreater} fingerprint -{\textgreater} seach structure database
+
+Problem: Structure identification (without spectra library)
+
+Solutions:
+1. Simulation of mass spectra from molecule structure
+2. combinarial fragmentation
+3. prediction of molecular fingerprints
+
+No stereochemical information
+
+MKL Multiple Kernel Learning - tries to assign weights to the individual kernels (improved prediction performance) (ALIGNF Cortes et al.)
+
+The Tool is divided into three parts. Learning phase, prediction phase {\&} scoring phase
+
+
+The first one is the machine learning part were known compounds from spectral libraries were used to calculate fragmentation trees, which were then used to compete molecular properties from molecular structures (fingerprints). These were then used to train individual support vector machines for each property (using multiple kernel learning). 
+
+In the prediction phase ms/ms spectra from unknown compounds are used to find a fragmentation tree and to predict the fingerprint of the unknown molecule.Â  
+
+In the scoring phase the predicted fingerprint is compared to fingerprint of molecular structures in a structure database, searching for the best match.
+
+----------
+
+kernel denotes similarity measure for MS/MS or fragmentation trees -{\textgreater} weights -{\textgreater} multiple kernel learning
+
+correcto solution 50 -{\textgreater} 66.7{\%}},
+author = {D{\"{u}}hrkop, Kai and Shen, Huibin and Meusel, Marvin and Rousu, Juho and B{\"{o}}cker, Sebastian},
+doi = {10.1073/pnas.1509788112},
+file = {:Users/alka/Documents/work/paper/mendeleydesktop/D{\"{u}}hrkop et al/D{\"{u}}hrkop et al.{\_}2015{\_}Searching molecular structure databases with tandem mass spectra using CSIFingerID.pdf:pdf;:Users/alka/Documents/work/paper/mendeleydesktop/D{\"{u}}hrkop et al/D{\"{u}}hrkop et al.{\_}2015{\_}Searching molecular structure databases with tandem mass spectra using CSIFingerID(2).pdf:pdf},
+isbn = {0027-8424},
+issn = {0027-8424},
+journal = {Proc. Natl. Acad. Sci.},
+keywords = {Animals,Databases,Humans,Machine Learning,Mass Spectrometry,Metabolomics,Protein},
+month = {oct},
+number = {41},
+pages = {12580--12585},
+pmid = {26392543},
+title = {{Searching molecular structure databases with tandem mass spectra using CSI:FingerID}},
+url = {http://www.pnas.org/content/112/41/12580.abstract http://www.pnas.org/lookup/doi/10.1073/pnas.1509788112},
+volume = {112},
+year = {2015}
+}
+
+@article{Bocker2016,
+abstract = {BACKGROUND: Untargeted metabolomics commonly uses liquid chromatography mass spectrometry to measure abundances of metabolites; subsequent tandem mass spectrometry is used to derive information about individual compounds. One of the bottlenecks in this experimental setup is the interpretation of fragmentation spectra to accurately and efficiently identify compounds. Fragmentation trees have become a powerful tool for the interpretation of tandem mass spectrometry data of small molecules. These trees are determined from the data using combinatorial optimization, and aim at explaining the experimental data via fragmentation cascades. Fragmentation tree computation does not require spectral or structural databases. To obtain biochemically meaningful trees, one needs an elaborate optimization function (scoring).$\backslash$n$\backslash$nRESULTS: We present a new scoring for computing fragmentation trees, transforming the combinatorial optimization into a Maximum A Posteriori estimator. We demonstrate the superiority of the new scoring for two tasks: both for the de novo identification of molecular formulas of unknown compounds, and for searching a database for structurally similar compounds, our method SIRIUSÂ 3, performs significantly better than the previous version of our method, as well as other methods for this task.$\backslash$n$\backslash$nCONCLUSION: SIRIUSÂ 3 can be a part of an untargeted metabolomics workflow, allowing researchers to investigate unknowns using automated computational methods.Graphical abstractWe present a new scoring for computing fragmentation trees from tandem mass spectrometry data based on Bayesian statistics. The best scoring fragmentation tree most likely explains the molecular formula of the measured parent ion.},
+annote = {Fragmenation tree computation does not require spectral or structural databases.
+
+Use of maximum posteriori estimator instead of combinatorial optimization
+
+Use isotope pattern to get the molecular formula of the small molecule
+
+FT - Maximum colorful subtree problem - NP Hard problem},
+author = {B{\"{o}}cker, Sebastian and D{\"{u}}hrkop, Kai},
+doi = {10.1186/s13321-016-0116-8},
+file = {:Users/alka/Documents/work/paper/mendeleydesktop/B{\"{o}}cker, D{\"{u}}hrkop/B{\"{o}}cker, D{\"{u}}hrkop{\_}2016{\_}Fragmentation trees reloaded.pdf:pdf},
+issn = {17582946},
+journal = {J. Cheminform.},
+keywords = {Computational methods,Fragmentation trees,Mass spectrometry,Metabolites,Natural products},
+number = {1},
+pages = {1--26},
+pmid = {26839597},
+publisher = {Springer International Publishing},
+title = {{Fragmentation trees reloaded}},
+volume = {8},
+year = {2016}
+}
