--- a/Handout/handout.bib
+++ b/Handout/handout.bib
@@ -7,6 +7,26 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@MISC{rdkit,
+  title = {{RDK}it: Open-source cheminformatics},
+  howpublished = {\url{http://www.rdkit.org}},
+  note = {[Online; accessed 31-August-2018]},
+  key = {RDKit, online}
+}
+
+@article{cdk,
+	author = {Steinbeck, Christoph and Han, Yongquan and Kuhn, Stefan and Horlacher, Oliver and Luttmann, Edgar and Willighagen, Egon},
+	title = {The Chemistry Development Kit (CDK):  An Open-Source Java Library for Chemo- and Bioinformatics},
+	journal = {Journal of Chemical Information and Computer Sciences},
+	volume = {43},
+	number = {2},
+	pages = {493-500},
+	year = {2003},
+	doi = {10.1021/ci025584y},
+	note ={PMID: 12653513}
+}
+
+
 @article{rost2016openms,
   title={OpenMS: a flexible open-source software platform for mass spectrometry data analysis},
   author={R{\"o}st, Hannes L and Sachsenberg, Timo and Aiche, Stephan and Bielow, Chris and Weisser, Hendrik and Aicheler, Fabian and Andreotti, Sandro and Ehrlich, Hans-Christian and Gutenbrunner, Petra and Kenar, Erhan and others},
