--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -417,7 +417,7 @@ Even though the basic capabilities for (interactive) plots in KNIME are valuable
 Following the identification, quantification and statistical analysis our data is merged and formatted for reporting.
 First we want to discard our normalized and logarithmized intensity values in favor of the original ones.
 To this end we first remove the intensity columns (\KNIMENODE{Column Filter}) and add the original intensities back (\KNIMENODE{Joiner}).
-For that we use an \textit{Inner Join} \footnote{\textit{Inner Join} is a technical term that describes how database tables are merged.} with the \KNIMENODE{Joiner} node. In the dialog of the node we add two entries for the Joining Columns and for the first column we pick "retention_time" from the top input (i.e. the AccurateMassSearch output) and "rt_cf" (the retention time of the consensus features) for the bottom input (the result from the quantification). For the second column you should choose "exp_mass_to_charge" and "mz_cf" respectively to make the joining unique. Note that the workflow needs to be executed up to the previous nodes for the possible selections of columns to appear.
+For that we use an \textit{Inner Join} \footnote{\textit{Inner Join} is a technical term that describes how database tables are merged.} with the \KNIMENODE{Joiner} node. In the dialog of the node we add two entries for the Joining Columns and for the first column we pick "retention\_time" from the top input (i.e. the AccurateMassSearch output) and "rt\_cf" (the retention time of the consensus features) for the bottom input (the result from the quantification). For the second column you should choose "exp\_mass\_to\_charge" and "mz\_cf" respectively to make the joining unique. Note that the workflow needs to be executed up to the previous nodes for the possible selections of columns to appear.
 
 \begin{figure}[htbp]
   \centering
