Update metabo KNIME workflow pictures

--- a/Handout/metabolomics.tex
+++ b/Handout/metabolomics.tex
@@ -182,7 +182,7 @@ Run the pipeline and inspect the output.
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.85\textwidth]{graphics/metabo/metabo_part1}
+  \includegraphics[width=0.85\textwidth]{graphics/metabo/metabo_part1_with_labels.png}
   \caption{Label-free quantification workflow for metabolites}
   \label{fig:metabo_part1}
 \end{figure}
@@ -243,7 +243,7 @@ The complete workflow from this section is shown in \cref{fig:metabo_part2}.
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.85\textwidth]{graphics/metabo/metabo_part2}
+  \includegraphics[width=0.85\textwidth]{graphics/metabo/metabo_part2.png}
   \caption{Label-free quantification and identification workflow for metabolites}
   \label{fig:metabo_part2}
 \end{figure}
@@ -259,7 +259,7 @@ The full workflow is shown in \cref{fig:metabo_part3}.
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.85\textwidth]{graphics/metabo/metabo_part3_2015}
+  \includegraphics[width=0.85\textwidth]{graphics/metabo/metabo_part3.png}
   \caption{Label-free quantification and identification workflow for metabolites that loads the results into KNIME and joins the tables.}
   \label{fig:metabo_part3}
 \end{figure}
